[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/panelPause.gd" type="Script" id=1]

[node name="panel pause" type="Panel"]
pause_mode = 2
self_modulate = Color( 1, 1, 1, 0.407843 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 110.0
margin_top = 110.0
margin_right = -110.0
margin_bottom = -110.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 349.0
margin_top = 216.0
margin_right = 454.0
margin_bottom = 284.0

[node name="Retour" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 105.0
margin_bottom = 20.0
shortcut_in_tooltip = false
text = "Retour"

[node name="Recommencer" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 105.0
margin_bottom = 44.0
text = "Recommencer"

[node name="Quitter" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 105.0
margin_bottom = 68.0
text = "Quitter"
[connection signal="pressed" from="CenterContainer/VBoxContainer/Retour" to="." method="_on_Retour_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Recommencer" to="." method="_on_Recommencer_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quitter" to="." method="_on_Quitter_pressed"]
